# task_19

./: pyproject.toml
alembic/: env.py
alembic/versions/: e1f2a35feaf8_init.py
src/: main.py
src/api/: __init__.py
src/api/v1/: auth.py  snippet.py
src/auth/: auth.py
src/core/: config.py  logger.py  types.py
src/db/: db.py
src/models/: __init__.py  role.py  snippet.py  user.py
src/schemas/: snippet.py  user.py
src/services/: auth.py  snippet.py  user.py
src/tests/: conftest.py
src/tests/unit_tests/: test_snippet_serivces.py
